--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <header class="headercolor">
     <h1> Dustin Dampeer</h1>
-    <h2>Software Developer</h2>
+    <h2>Aspiring Software Engineer</h2>
   </header>
   <main class=>
     <div>
