--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       <article class="center">
         <section>
           <header>
+            <img src="images/codingpic.jpg"width="1000" alt="pic of code" class="imgsizing">
             <h1>My name is Dustin</h1>
           </header>
           <p >I am a Computer programing major living in las vegas</p>
