--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 
   <header class="headercolor">
-    <h1> Dustin Dampeer</h1>
+    <h1> Dustin Dampeer Jr</h1>
     <h2>Aspiring Software Engineer</h2>
   </header>
   <main class=>
@@ -30,7 +30,7 @@
           <p>Even at a early age i know i wanted to become a software Developer because i was fascinated about:</p>
 
           <ul >
-            <li>How software work.</li>
+            <li>How software works.</li>
             <li>How software affect our day to day life.</li>
             <li>How software can make a better tomorrow.</li>
           </ul>
@@ -39,13 +39,15 @@
         <section>
           <h2>About Me</h2>
           <p>Software development always been an interest of mines ever since a little kid.
-            I knew software engineers run the world with what that do in their work.
+            I knew software engineers ran the world with what they
+            do in their work.
             <p>I would
               love to work on something that millions of people use every day.
 
             </p>
             <p>
-              Other than coding I’m a Hugh gamer from simulators to rpg’s like spent my free time playing games.
+              Other than coding I’m a hugh gamer from simulators to rpg’s . I really like to spent my free time playing
+              games and being outdoors.
             </p>
 
             <hr>
@@ -73,7 +75,7 @@
 
   </main>
   <footer class="footercolor">
-    <h3> &#169 Dustin Dampeer </h3>
+    <h3> &#169 Dustin Dampeer jr </h3>
   </footer>
 
 
