--- a/index.html
+++ b/index.html
@@ -18,20 +18,20 @@
     <h1> Dustin Dampeer Jr</h1>
     <h2>Aspiring Software Engineer</h2>
   </header>
-  <main class=>
+  <main>
     <div>
       <article class="center">
         <section>
           <header>
-            <img src="images/codingpic.jpg"width="1000" alt="pic of code" class="imgsizing">
-            <h1>My name is Dustin</h1>
+            <img src="images/codingpic.jpg" width="1000" alt="pic of code" class="imgsizing">
+            <h2>My name is Dustin</h2>
           </header>
-          <p >I am a Computer programing major living in las vegas</p>
-          <p>Even at a early age i know i wanted to become a software Developer because i was fascinated about:</p>
+          <p >I am a Computer programing major living in las Vegas</p>
+          <p>Even at an early age I know I wanted to become a software Developer because I was fascinated about:</p>
 
           <ul >
             <li>How software works.</li>
-            <li>How software affect our day to day life.</li>
+            <li>How software affects our day-to-day life.</li>
             <li>How software can make a better tomorrow.</li>
           </ul>
         </section>
@@ -46,7 +46,7 @@
 
             </p>
             <p>
-              Other than coding I’m a hugh gamer from simulators to rpg’s . I really like to spent my free time playing
+              Other than coding I’m a huge gamer from simulators to rpg’s . I really like to spend my free time playing
               games and being outdoors.
             </p>
 
@@ -54,16 +54,15 @@
             <footer>
               <h2>Contact Me</h2>
               <p>Here is where you can reach me.</p>
-              <ul>
-                <li><a href= "https://linkedin.com/in/dustin-dampeer-273256175" target=' _blank' <p>LinkedIn
-                </p>
+              <ol>
+                <li><a href= "https://linkedin.com/in/dustin-dampeer-273256175" target= "_blank"> LinkedIn
               </a></li>
 
-              <li><a href="https://github.com/nolaxking" target=' _blank'<p>Github</p></a></li>
+              <li><a href="https://github.com/nolaxking" target=' _blank'> GitHub</a></li>
 
-              <li><a href="mailto:dustindampeer3jr@gmail.com"<p>Gmail</p></a></li>
+              <li><a href="mailto:dustindampeer3jr@gmail.com"> Gmail </a></li>
 
-            </ul>
+            </ol>
 
           </footer>
         </section>
