--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
   </main>
   <footer class="footercolor">
-    <h3> &#169 Dustin Dampeer jr </h3>
+    <h3> Dustin Dampeer jr </h3>
   </footer>
 
 
