--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <img src="images/codingpic.jpg" width="1000" alt="pic of code" class="imgsizing">
             <h2>My name is Dustin</h2>
           </header>
-          <p >I am a Computer programing major living in las Vegas</p>
+          <p >I am a Computer programming major living in Las Vegas</p>
           <p>Even at an early age I know I wanted to become a software Developer because I was fascinated about:</p>
 
           <ul >
@@ -75,7 +75,7 @@
   </main>
   <footer class="footercolor">
     <h3> Dustin Dampeer jr </h3>
-  </footer>
+  </footer>13
 
 
 </body>
