--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 <body class="maincolor">
 
 
+
   <header class="headercolor">
+<!--header-->
     <h1> Dustin Dampeer Jr</h1>
     <h2>Aspiring Software Engineer</h2>
   </header>
@@ -28,7 +30,7 @@
           </header>
           <p >I am a Computer programming major living in Las Vegas</p>
           <p>Even at an early age I know I wanted to become a software Developer because I was fascinated about:</p>
-
+<!-- unorderedlist-->
           <ul >
             <li>How software works.</li>
             <li>How software affects our day-to-day life.</li>
@@ -54,6 +56,7 @@
             <footer>
               <h2>Contact Me</h2>
               <p>Here is where you can reach me.</p>
+<!-- orderedlist-->
               <ol>
                 <li><a href= "https://linkedin.com/in/dustin-dampeer-273256175" target= "_blank"> LinkedIn
               </a></li>
@@ -73,6 +76,7 @@
 
 
   </main>
+  <!-- footer-->
   <footer class="footercolor">
     <h3> Dustin Dampeer jr </h3>
   </footer>13
