--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
             <h2>My name is Dustin</h2>
           </header>
           <p >I am a Computer programming major living in Las Vegas</p>
-          <p>Even at an early age I know I wanted to become a software Developer because I was fascinated about:</p>
+          <p>Even at an early age, I know I wanted to become a software Developer because I was fascinated about:</p>
 <!-- unorderedlist-->
           <ul >
-            <li>How software works.</li>
+            <li>How the software works.</li>
             <li>How software affects our day-to-day life.</li>
             <li>How software can make a better tomorrow.</li>
           </ul>
@@ -40,7 +40,7 @@
         <hr>
         <section>
           <h2>About Me</h2>
-          <p>Software development always been an interest of mines ever since a little kid.
+          <p>Software development has always been an interest of mines ever since a little kid.
             I knew software engineers ran the world with what they
             do in their work.
             <p>I would
@@ -48,7 +48,7 @@
 
             </p>
             <p>
-              Other than coding I’m a huge gamer from simulators to rpg’s . I really like to spend my free time playing
+              Other than coding, I’m a huge gamer from simulators to fps games. I really like to spend my free time playing
               games and being outdoors.
             </p>
 
