--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
             <img src="images/codingpic.jpg" width="1000" alt="pic of code" class="imgsizing">
             <h2>My name is Dustin</h2>
           </header>
-          <p >I am a Computer programming major living in Las Vegas</p>
-          <p>Even at an early age, I know I wanted to become a software Developer because I was fascinated about:</p>
+          <p >I am a computer programming major living in Las Vegas.</p>
+          <p>Even at an early age, I knew I wanted to become a software developer because I was fascinated by:</p>
 <!-- unorderedlist-->
           <ul >
             <li>How the software works.</li>
@@ -40,9 +40,9 @@
         <hr>
         <section>
           <h2>About Me</h2>
-          <p>Software development has always been an interest of mines ever since a little kid.
+          <p>Software development has always been an interest of mine ever since a little kid.
             I knew software engineers ran the world with what they
-            do in their work.
+            did in their work.
             <p>I would
               love to work on something that millions of people use every day.
 
