--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <hr>
         <section>
           <h2>About Me</h2>
-          <p>Software development has always been an interest of mine ever since a little kid.
+          <p>Software development has been an interest of mine since I was a little kid.
             I knew software engineers ran the world with what they
             did in their work.
             <p>I would
@@ -48,7 +48,7 @@
 
             </p>
             <p>
-              Other than coding, I’m a huge gamer from simulators to fps games. I really like to spend my free time playing
+              Other than coding, I’m a huge gamer from simulators to role playing games. I really like to spend my free time playing
               games and being outdoors.
             </p>
 
